fix Home overflow style issue

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -1,27 +1,28 @@
-@import "../variables.scss";
-
 html {
-  height: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 body {
-  margin: 0;
-  height: 100%;
-  font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+	margin: 0;
+	height: 100%;
+	width: 100%;
+	font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
 
 #app {
-  height: 100%;
-  min-width: 100%;
-  display: inline-flex;
-  min-width: 100vw;
+	height: 100%;
+	display: inline-flex;
+	min-width: 100%;
 }
 
 ::-webkit-scrollbar {
-  height: 10px;
-  background: #ddd;
+	width: 10px;
+	height: 10px;
+	background: #ddd;
 }
+
 ::-webkit-scrollbar-thumb {
-  background: #aaa;
-  border-radius: 3px;
+	background: #aaa;
+	border-radius: 3px;
 }
